[package]
name = "dvine-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
description = "An attempt to revive an old game"
homepage = "https://github.com/master-g/dvine-rs.git"
repository = "https://github.com/master-g/dvine-rs"
license = "Apache-2.0"
keywords = ["game"]
exclude = [".github/", "crates/"]
resolver = "3"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc-assets/header.html"]

[workspace]
members = ["crates/*"]
exclude = ["benches"]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = [
	"derive",
	"env",
	"unicode",
	"wrap_help",
] }
config = { version = "0.15.18", features = ["toml"] }
encoding_rs = "0.8.35"
env_logger = "0.11.8"
log = "0.4"
md-5 = "0.10.6"
rand = { version = "0.9.2", features = ["os_rng", "small_rng"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
test-log = { version = "0.2.18" }
thiserror = "2.0.17"

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"

[dependencies]
dvine_internal = { path = "crates/dvine_internal" }
log = { workspace = true }
env_logger = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dvine_dylib = { path = "crates/dvine_dylib", optional = true }

[features]
dynamic_linking = ["dep:dvine_dylib"]

[lints]
workspace = true

[[example]]
name = "file-types"
path = "tests/file_types/main.rs"

# bin
[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = true
panic = "abort"
codegen-units = 1
