[package]
name = "dvine-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
description = "An attempt to revive an old game"
homepage = "https://github.com/master-g/dvine-rs.git"
repository = "https://github.com/master-g/dvine-rs"
license = "Apache-2.0"
keywords = ["game"]
exclude = [".github/", "crates/"]
resolver = "3"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc-assets/header.html"]

[workspace]
members = ["crates/*", "benches"]

[workspace.package]
edition = "2024"
rust-version = "1.91.0"

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = [
	"derive",
	"env",
	"unicode",
	"wrap_help",
] }
config = { version = "0.15.19", features = ["toml"] }
encoding_rs = "0.8.35"
env_logger = "0.11.8"
hex = "0.4.3"
hound = "3.5.1"
image = "0.25.8"
log = "0.4"
md-5 = "0.10.6"
rand = { version = "0.9.2", features = ["os_rng", "small_rng"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
test-log = { version = "0.2.18" }
thiserror = "2.0.17"

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"

[dependencies]
clap.workspace = true
dvine_internal = { path = "crates/dvine_internal" }
env_logger.workspace = true
hex.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dvine_dylib = { path = "crates/dvine_dylib", optional = true }

[features]
dynamic_linking = ["dep:dvine_dylib"]

[lints]
workspace = true

[dev-dependencies]
clap = { workspace = true, features = [
	"derive",
	"env",
	"unicode",
	"wrap_help",
] }
encoding_rs.workspace = true
hex.workspace = true
hound.workspace = true
image.workspace = true
inquire = "0.7"
rodio = "0.19"
serde_json.workspace = true

[[example]]
name = "file-types"
path = "examples/file_types/main.rs"

[[example]]
name = "kg_utils"
path = "examples/kg_utils/main.rs"

[[example]]
name = "mfd_utils"
path = "examples/mfd_utils/main.rs"

[[example]]
name = "efc_utils"
path = "examples/efc_utils/main.rs"

[[example]]
name = "spr_utils"
path = "examples/spr_utils/main.rs"

[[example]]
name = "startup_ini_utils"
path = "examples/startup_ini_utils/main.rs"

[[example]]
name = "fnt_utils"
path = "examples/fnt_utils/main.rs"

[[example]]
name = "dsk_utils"
path = "examples/dsk_utils/main.rs"


# bin
[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = true
panic = "abort"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
