[package]
name = "dvine_internal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

[dependencies]
dvine_types = { path = "../dvine_types" }
dvine_vfs = { path = "../dvine_vfs" }

[lints]
workspace = true
